authentication api integration complete